Cálculo de Peso Ideal
Agora o sistema também mostra qual a faixa de peso ideal para o usuário.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="site">
             <div class="calculadora">
                 <form method="POST" class="formulario">
-                    <label>Altura:<br/>
-                    <input type="number" step="0.01" id="altura" name="altura" class="box" placeholder="Digite sua altura." /></label><br/><br/>
-                    <label>Peso:<br/>
+                    <label>Altura: (metros)<br/>
+                    <input type="number" step="0.01" id="altura" name="altura" class="box" placeholder="Digite sua altura." autofocus/></label><br/><br/>
+                    <label>Peso: (kgs)<br/>
                     <input type="number" step="0.01" id="peso" name="peso" class="box" placeholder="Digite seu peso." /></label><br/><br/>
                     <input type="submit" value="Calcular IMC" id="bt" class="bt" />
                 </form>
